# app-personal-portfolio-dataflow

./: .env.example  .gitflow  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT-CHECKLIST.md  LICENSE  Makefile  README.md  deploy-to-vps.sh  docker-compose.yml  pyproject.toml
.claude/: settings.json
.gitea/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml
data/raw/football/: SOURCES.md
dataflow/: config.py
dataflow/football/: __init__.py
dataflow/football/loaders/: __init__.py  base.py  loaders.py
dataflow/football/models/: __init__.py  base.py  dimensions.py  facts.py
dataflow/football/parsers/: __init__.py  deloitte.py  mlspa.py  salimt.py
dataflow/football/schemas/: __init__.py  deloitte.py  mlspa.py  salimt.py
dataflow/toronto/: README.md  __init__.py  demo_data.py
dataflow/toronto/loaders/: __init__.py  amenities.py  base.py  (+6 more)
dbt/: dbt_project.yml  packages.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
docs/: CONTRIBUTING.md  DATABASE_SCHEMA.md  MART_CLEANUP_FIX.md  PROJECT_REFERENCE.md  mart_toronto_data_dictionary.csv
docs/changes/: Portfolio-Changes.txt
docs/data-quality/: DATA_SOURCES.md  HOUSING_NULL_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  INCOME_IMPUTATION_TEST.sql
docs/deployment/: deployment-checklist.md  shared-postgres.md  vps-deployment.md
docs/football/: README.md
docs/plans/: cmhc-excel-rental-metrics.md
docs/plugin-prompts/: ui-dash-adjust.md  ui-layout-adjust.md
docs/project-lessons-learned/: INDEX.md  phase-4-dbt-test-syntax.md  sprint-10-dataflow-separation.md  sprint-10-formspree-dash-integration.md  sprint-9-10-figure-factory-pattern.md  sprint-9-10-graceful-error-handling.md  sprint-9-10-modular-callback-structure.md  sprint-9-gitea-labels-user-repos.md  sprint-9-read-claude-md-first.md  xlsx-consolidated-labels.md
docs/runbooks/: adding-dashboard.md  adding-domain.md  deployment.md
docs/toronto/: README.md
notebooks/: README.md
portfolio_app/: __init__.py  app.py  config.py
portfolio_app/assets/: projects.css  sidebar.css
portfolio_app/callbacks/: __init__.py  contact.py  sidebar.py  theme.py
portfolio_app/components/: __init__.py  map_controls.py  metric_card.py  sidebar.py  time_slider.py
portfolio_app/design/: __init__.py  tokens.py
portfolio_app/errors/: __init__.py  exceptions.py
portfolio_app/figures/: __init__.py
portfolio_app/pages/: about.py  contact.py  health.py  home.py  projects.py  resume.py
portfolio_app/utils/: __init__.py  markdown_loader.py
scripts/: deploy.sh  logs.sh  run-detached.sh  verify_natural_keys.py
scripts/data/: __init__.py  cleanup_mart_tables.py  cleanup_orphan_marts.py  load_football_data.py  load_toronto_data.py  seed_amenity_data.py
scripts/db/: diagnose_xlsx_labels.py  init-postgis.sql  init-reader-user.sql  init_schema.py  migrate_sprint12_phase1.sql
scripts/deploy/: deploy-to-vps.sh
scripts/etl/: toronto.sh
tests/: __init__.py  conftest.py  test_football_parsers.py  test_football_schemas.py  test_placeholder.py
(+134 files in other folders)
